--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ height: 677px;
 }
 .half-width img:hover{
     transform: rotate(10deg);
-    transition-delay: 1s;
+    transition: width 2s, height 2s, transform 2s;
 }
 .half-width img{
     width: 556.01px;
@@ -148,4 +148,35 @@ margin-bottom: 120px;
     color: black;
     font-size:  18px;
     margin:20px 0px;
+}
+
+/* responsiveness */
+@media only screen and (max-width:688px) {
+    .container{
+        display:flex;
+        flex-direction:column;
+        background-color: #2D25A0;
+
+    }
+    .player{
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
+        grid-row-gap: 27px;  
+    }
+    
+    .thumbnail{
+        width: 330px;
+        height: 426px;
+        position: relative;  
+    }
+    .thumbnail img{
+        width: 300px;
+        height: 256px;
+        position: relative;
+    }
+    .social-media{
+        margin-top:5250px;
+        width: 10px;
+        height: 10px;
+    }
 }
